--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -2,7 +2,8 @@
     text-decoration: none;
 }
 .section1{
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     color: white;
     display: flex;
     justify-content: center;
@@ -28,14 +29,14 @@
     flex-direction: column;
     margin-left: 70%;
     text-align: center;
-    margin-bottom: 9%;
-    opacity: 0.8;
-    border-radius: 50px;
+    margin-bottom: 10%;
+    opacity: 0.9;
+    border-radius: 10%;
 }
 .section1-div2 {
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 10px;
     margin-bottom: 30%;
     text-shadow: 3px 3px #faebd7;
 }
@@ -53,14 +54,14 @@
     color: white;
     border: none;
     font-size: 1rem;
-    cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
 }
-.section1-button button{
+.section1-div button{
     padding: 10px 50px 10px 50px;
-    margin-bottom: 20%;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
-.section1-button button:hover {
+.section1-div button:hover {
     transform: scale(1.05);
     background-color: #000000;
     color: #FFFFFF;
@@ -94,20 +95,20 @@
 .img1{
     border-style: solid;
     border-radius: 50px;
-    width: fit-content;
-    height: fit-content;
+    width: 31%;
+    height: 31%;
 }
 .img2{
     border-style: solid;
     border-radius: 50px;
-    width: fit-content;
-    height: fit-content;
+    width: 30%;
+    height: 30%;
 }
 .img3{
     border-style: solid;
     border-radius: 50px;
-    width: fit-content;
-    height: fit-content;
+    width: 30%;
+    height: 30%;
 }
 .section2-button2{
     padding: 10px 30px 10px 30px;
@@ -119,6 +120,7 @@
 .section2-button2 button{
     padding: 20px;
     background-color: #fff0f9;
+    cursor: pointer;
 }
 .section2-button2 button:hover {
     transform: scale(1.05);
@@ -133,7 +135,6 @@
 .wedding1{
     margin-right: 1%;
     border-radius: 10px;
-    width: fit-content;
     width: fit-content;
 }
 .section3{
@@ -188,40 +189,65 @@
     background-color: #393939;
     color: #FFFFFF;
 }
-.logo-footer {
-    display: flex;
-    align-items: center;
-    gap: 10px; 
-    margin-left: 30%;
+@media only screen and (max-width: 600px) {
+.section1-div {
+    margin: 20px auto;
+    width: 90%;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-bottom: 30px;
+    margin-right: 5%;
 }
-  
-.logo-footer img {
-    height: 200px;
-    width: auto;
+.section1-div h1 {
+    font-size: 30px;
+    margin-top: 10%;
 }
-  
-.logo-footer p {
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    color: #e389bd;
-    margin: 0;
-    font-size: xx-large;
+.section1-div2 p {
+    font-size: 18px;
 }
-.footer {
+
+.section1-div button {
+    width: 100%;
+    padding: 10px;
+}
+.section2-img {
+    flex-direction: column;
+}
+.img1, .img2, .img3 {
+    width: 90%;
+    height: auto;
+    border-radius: 20px;
+}
+.section2-div h2 {
+    font-size: 30px;
+}
+.section2-div p {
+    font-size: 20px;
+}
+.section2-button2 button {
+    width: 100%;
+    font-size: 16px;
+}
+.section3 {
+    background-size: cover;
+    background-position: center;
+}
+.section3-div {
+    margin: 20px auto;
+    width: 90%;
+    margin-right: auto;
     padding: 20px;
-    background-color: #f1f1f1; /* or your footer bg */
+    gap: 30px;
 }
-.footer-nav {
-    list-style: none;
-    display: flex;
-    justify-content: flex-start;
-    gap: 20px; 
-    padding: 0;
-    margin: 0;
+.section3-div h3 {
+    font-size: 24px;
 }
-.footer-nav li a {
-    text-decoration: none;
-    color: #e389bd;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
+.section3-div p {
+    font-size: 18px;
+}
+.section3-div button {
+    width: 100%;
+    padding: 15px;
+    font-size: 16px;
+}
 }
