--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -1,6 +1,6 @@
 @import url(home.css);
 @import url(about.css);
-
+@import url(shop.css);
 body{
     background-color: #faebd7;
     height: 100%;
@@ -79,7 +79,6 @@ footer{
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
-    align-items: flex-start;
     padding: 20px;
     position: relative;
     align-items: center;
@@ -87,12 +86,16 @@ footer{
 .logo-footer {
     position: absolute;
     left: 20px;
+    transform: translateY(28%);
     display: flex;
     align-items: center;
 }
 .logo-footer img {
-    height: 200px;
+    height: 150px;
     width: auto;
+    margin-bottom: 0;
+    align-items: center;
+    justify-content: center;
 }
 .footer-menu{
     display: flex;
@@ -107,7 +110,7 @@ footer{
     padding: 0;
     align-items: center;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 .navdiv {
     flex-direction: column;
     align-items: center;
