--- a/assets/style/shop.css
+++ b/assets/style/shop.css
@@ -63,6 +63,22 @@
 .shop-sales p {
     margin: 5px 0;
 }
+.buy-btn {
+    background-color: #611b35;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    margin-top: 10px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.2s ease;
+}
+
+.buy-btn:hover {
+    background-color: #8a2e50;
+}
+
 @media only screen and (min-width: 768px) {
     .shop-sales {
         grid-template-columns: repeat(3, 1fr);
