--- a/assets/style/shop.css
+++ b/assets/style/shop.css
@@ -72,13 +72,22 @@
     font-size: 14px;
     cursor: pointer;
     border-radius: 5px;
-    transition: background-color 0.2s ease;
 }
 
 .buy-btn:hover {
-    background-color: #8a2e50;
+    scale: 1.05;
 }
 
+.stock-level {
+  color: #333;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 5px;
+}
+
+[data-stock="0"] .stock-level {
+  color: red;
+}
 @media only screen and (min-width: 768px) {
     .shop-sales {
         grid-template-columns: repeat(3, 1fr);
